# SteamGridDB-DL

./: .gitignore  Cargo.toml  README.md  build-release.sh
.github/workflows/: dev-rust.yml
src/: connectors.rs  files.rs  lib.rs  main.rs
src/connectors/: api_responses.rs  http.rs
tests/: api.rs  config_build.rs  serialization.rs
tests/resources/: collection.empty.json  collection.json  game.json  game.noplatform.json
