[package]
name = "steamgriddb-dl"
version = "0.9.0"
edition = "2021"
description = "A CLI utility for downloading content from www.steamgriddb.com"
repository = "https://github.com/TheRealGLH/SteamGridDB-DL"
readme = "README.md"
license = "MIT"
keywords = ["steam", "steamgriddb"]
categories = ["command-line-utilities"]

[dependencies]
ureq = { version = "2.12.1", features = ["json"] }
serde = { version = "1", features = ["derive"] }
